src/generator/snapshots/bevy_state_plugin_generator__generator__tests__format_source@formatted_rustfmt.snap
---
source: src/generator/tests.rs
expression: formatted
---
fn main() {
    println!("Hello, world!");
}
