src/generator/snapshots/bevy_state_plugin_generator__generator__tests__generate_debug_info@fruits.txt_rustfmt.snap
---
source: src/generator/tests.rs
expression: "generate_debug_info(src_path, source)"
---
// generated by bevy_state_plugin_generator v[CARGO_PKG_VERSION]
// src: fruits.txt
// Apple Orange { O1 O2 }
