src/generator/snapshots/bevy_state_plugin_generator__generator__tests__generate_debug_info@root.txt.snap
---
source: src/generator/tests.rs
expression: "generate_debug_info(src_path, source)"
---
// generated by bevy_state_plugin_generator vCARGO_PKG_VERSION
// src: root.txt
// RootState
