src/generator/snapshots/bevy_state_plugin_generator__generator__tests__generate_plugin_source@fruits.txt_rustfmt.snap
---
source: src/generator/tests.rs
expression: "test_plugin_formatted(root_node, Default::default())"
---
#![allow(missing_docs)]
use bevy::prelude::AppExtStates;
pub mod states {
    use bevy::prelude::StateSet;
    #[derive(bevy::prelude::States, Hash, Default, Debug, Clone, PartialEq, Eq)]
    pub enum GameState {
        #[default]
        Loading,
        Ready,
    }

    #[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
    #[source(GameState = GameState::Loading)]
    pub struct GameLoadingState;

    #[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
    #[source(GameState = GameState::Ready)]
    pub enum GameReadyState {
        #[default]
        Menu,
        Game,
    }

    #[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
    #[source(GameReadyState = GameReadyState::Menu)]
    pub enum GameReadyMenuState {
        #[default]
        Main,
        Options,
    }

    #[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
    #[source(GameReadyMenuState = GameReadyMenuState::Main)]
    pub struct GameReadyMenuMainState;

    #[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
    #[source(GameReadyMenuState = GameReadyMenuState::Options)]
    pub struct GameReadyMenuOptionsState;

    #[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
    #[source(GameReadyState = GameReadyState::Game)]
    pub enum GameReadyGameState {
        #[default]
        Playing,
        Paused,
        GameOver,
    }

    #[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
    #[source(GameReadyGameState = GameReadyGameState::Playing)]
    pub struct GameReadyGamePlayingState;

    #[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
    #[source(GameReadyGameState = GameReadyGameState::Paused)]
    pub struct GameReadyGamePausedState;

    #[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
    #[source(GameReadyGameState = GameReadyGameState::GameOver)]
    pub struct GameReadyGameGameOverState;
}
pub struct GeneratedStatesPlugin;
impl bevy::app::Plugin for GeneratedStatesPlugin {
    fn build(&self, app: &mut bevy::app::App) {
        app.init_state::<states::RootState>()
            .add_sub_state::<states::GameLoadingState>()
            .add_sub_state::<states::GameReadyState>()
            .add_sub_state::<states::GameReadyMenuState>()
            .add_sub_state::<states::GameReadyMenuMainState>()
            .add_sub_state::<states::GameReadyMenuOptionsState>()
            .add_sub_state::<states::GameReadyGameState>()
            .add_sub_state::<states::GameReadyGamePlayingState>()
            .add_sub_state::<states::GameReadyGamePausedState>()
            .add_sub_state::<states::GameReadyGameGameOverState>();
    }
}
